force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__CodePrefixText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodePrefixText__c</fullName>
    <label>Code Prefix</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodePrefixText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>