force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__HasTimeBasedVoucherPeriod__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasTimeBasedVoucherPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time-Based Voucher Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasTimeBasedVoucherPeriod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>