force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__IsPartialRedeemable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPartialRedeemable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Redeemable</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPartialRedeemable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>